# AngryMipts

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  build_web.sh  scores.json
.github/workflows/: ci.yml  web-pages.yml
Tiled_levels/: level_5.tmj
cmake/: toolchain-emscripten.cmake
levels/: level_01.json  level_010.json  level_011.json  level_0111.json  level_0112.json  level_0113.json  level_0114.json  level_0115.json  level_0116.json  level_012.json  level_013.json  level_014.json  level_02.json  level_020.json  level_03.json  level_04.json  level_05.json  level_06.json  level_07.json  level_08.json  level_09.json  level_10.json  level_11.json  level_12.json  level_13.json  level_14.json
src/: main.cpp
src/core/: score_system.cpp  score_system.hpp
src/data/: OnlineScoreClient.cpp  OnlineScoreClient.hpp  account_service.cpp  account_service.hpp  auth_client.cpp  auth_client.hpp  level_loader.cpp  level_loader.hpp  level_loader_smoke.cpp  logger.cpp  logger.hpp  online_score_client.cpp  online_score_client.hpp  score_saver.cpp  score_saver.hpp  session_manager.cpp  session_manager.hpp
src/physics/: physics_engine.cpp  physics_engine.hpp  physics_runtime.cpp  physics_runtime.hpp  physics_thread.cpp  physics_thread.hpp  physics_units.hpp
src/platform/: http.hpp  platform.hpp  platform_raylib.hpp  platform_sfml.hpp
src/render/: particles.cpp  particles.hpp  renderer.cpp  renderer.hpp  sfx_player.cpp  sfx_player.hpp  texture_manager.cpp  texture_manager.hpp
src/shared/: command.hpp  event.hpp  level_data.hpp  thread_safe_queue.hpp  types.hpp  world_config.hpp  world_snapshot.hpp
src/ui/: game_scene.cpp  game_scene.hpp  level_select_scene.cpp  level_select_scene.hpp  login_scene.cpp  login_scene.hpp  menu_scene.cpp  menu_scene.hpp  result_scene.cpp  result_scene.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  slingshot.cpp  slingshot.hpp  view_utils.cpp  view_utils.hpp
tests/: account_service_tests.cpp  auth_client_tests.cpp  online_score_client_tests.cpp  physics_engine_tests.cpp  session_manager_tests.cpp  ui_render_tests.cpp
tools/: tiled_to_level.py
web/: shell.html
